2006-04-10  Marien Zwart <marienz@gentoo.org>

	Fixes #323724

	* gnome-settings-mouse.c (configure_button_layout): fixed button
	mapping with evdev/left handed.

2006-03-29  Arjan Timmerman <arjani@soulfly.nl>

        Fixes #334153

	* factory.c (register_server): no trim needed. Now really fixed.

2006-03-23  Rodrigo Moya <rodrigo@novell.com>

	* factory.c (register_server): set DISPLAY environment variable as
	it is, no trimming needed.

2006-03-06  Michael Witrant <mike@lepton.fr>

	Fixes #94049

	* factory.c (register_server): new function, does the registration
	per DISPLAY.
	(main): call register_server.

2006-03-02  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-sound.c (start_esd): don't spawn esd, already done
	by libesound.

2006-02-15  Jens Granseuer <jensgr@gmx.net>

	Fixes #331168

	* acme-volume-gstreamer.c (acme_volume_gstreamer_open): C89 compilation
	fixes.

2006-02-06  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-sound.c (start_esd): only start esd if not running.

2006-01-30  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-multimedia-keys.c: reverted commit from 2006-01-11.
	
2006-01-28  chpe <chpe@gnome.org>

	Fixes #325686

	* gnome-settings-accessibility-keyboard.c (warning_dialog_post):
	added "accept_action" and "reject_action" arguments to show that in
	the buttons, rather than OK/CANCEL.
	(ax_slowkeys_warning_keys, ax_stickykeys_warning_dialog_post): use
	verbs in the buttons.

2006-01-28  Scott Bronson <bronson@rinspin.com>

	Fixes #318056

	* gnome-settings-font.c (load_cursor): use "mouse pointer" instead of
	"cursor" in user-visible strings.

2006-01-17  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-font.c (load_cursor): use g_mkdir_with_parents instead
	of creating the whole hierarchy by hand.

2006-01-15  Sebastien Bacher  <seb128@debian.org>

	* actions/Makefile.am:
	* actions/acme-volume-gstreamer.c: (_acme_set_mixer),
	(acme_volume_gstreamer_open): 